adde some optimisations in app

--- a/src/app/components/orders-list/orders-list.component.html
+++ b/src/app/components/orders-list/orders-list.component.html
@@ -66,7 +66,7 @@
       </div>
       <div
         class="col-12 flex justify-content-center"
-        *ngIf="orders.length <= 0"
+        *ngIf="orders.length <= 0 && !orders"
       >
         <h2>No Orders Found.!</h2>
       </div>
